--- a/src/components/FlashcardSet/SetActionButtons/SetActionButtons.css
+++ b/src/components/FlashcardSet/SetActionButtons/SetActionButtons.css
@@ -2,7 +2,7 @@
     display: flex;
     gap: 12px;
     margin: 24px 0 32px;
-    
+    align-self: stretch;
 }
 .action-btn-pink {
     width: 200px;
