--- a/src/components/FlashcardSet/SetHeader/SetHeader.css
+++ b/src/components/FlashcardSet/SetHeader/SetHeader.css
@@ -4,6 +4,7 @@
     gap: 16px;
     padding: 16px 16px 16px 0px;
     border-radius: 8px;
+    align-self: stretch;
 }
 .set-avatar {
     width: 48px;
