--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -6,7 +6,7 @@
   background-color: #ffffff;
   border-bottom: 1px solid #e0e0e0;
   position: relative;
-  z-index: 1000;  
+  z-index: 1000;
 }
 
 .navbar-left {
@@ -22,7 +22,7 @@
   padding: 4px;
   display: flex;
   align-items: center;
-  justify-content: center;  
+  justify-content: center;
   color: #333;
 }
 .navbar-button:hover {
@@ -32,7 +32,7 @@
 .navbar-logo {
   font-size: 38px;
   font-weight: bold;
-  color: #E53888;
+  color: #e53888;
   cursor: default;
 }
 
