--- a/src/components/TipTap/InteractiveImage.css
+++ b/src/components/TipTap/InteractiveImage.css
@@ -22,7 +22,9 @@
   cursor: pointer;
   color: #888;
   background-color: #fafafa;
-  transition: background-color 0.2s, color 0.2s;
+  transition:
+    background-color 0.2s,
+    color 0.2s;
   box-sizing: border-box;
 }
 
