sidebar nav layouts

--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -1,4 +1,8 @@
 .main-content {
-    margin-left: 100px;
+    margin-left: 80px;
     padding: 24px;
+}
+
+.sidebar.open ~ .main-content {
+    margin-left: 250px;
 }
