--- a/Frontend/src/components/Sidebar/Sidebar.css
+++ b/Frontend/src/components/Sidebar/Sidebar.css
@@ -34,17 +34,35 @@
     border: none;
     cursor: pointer;
     color: #555;
-    transition:
-        background-color 0.2s ease,
-        color 0.2s ease;
+    flex-direction: column;
 }
 
 .sidebar-link:hover {
-    background-color: #f5f5f5;
     color: #000;
 }
 
 .sidebar-link.active {
-    background-color: #f0ebeb;
     color: #e53888;
+}
+
+.sidebar.open {
+    width: 250px;
+    align-items: flex-start;
+}
+
+.sidebar.open .sidebar-link {
+    flex-direction: row;
+    justify-content: flex-start;
+
+    width: 200px;
+    gap: 20px;
+    margin: 0 28px;
+}
+
+.sidebar-label {
+    display: none;
+}
+
+.sidebar.open .sidebar-label {
+    display: block;
 }
