--- a/Frontend/src/components/Navbar/Navbar.css
+++ b/Frontend/src/components/Navbar/Navbar.css
@@ -74,41 +74,41 @@
     background-color: #e0e0e0;
 }
 
-/* .navbar-center {
-  flex-grow: 1;
-  display: flex;
-  justify-content: center;
+.navbar-center {
+    flex-grow: 1;
+    display: flex;
+    justify-content: center;
 }
 
 .search-container {
-  position: relative;
-  width: 100%;
-  max-width: 500px;
+    position: relative;
+    width: 100%;
+    max-width: 500px;
 }
 
 .search-icon {
-  position: absolute;
-  left: 12px;
-  top: 50%;
-  transform: translateY(-50%);
-  color: #888;
+    position: absolute;
+    left: 12px;
+    top: 50%;
+    transform: translateY(-50%);
+    color: #888;
 }
 
 .search-input {
-  width: 100%;
-  padding: 10px 16px 10px 40px;
-  border: 1px solid #ddd;
-  border-radius: 20px;
-  background-color: #f5f5f5;
-  font-size: 16px;
-  box-sizing: border-box;
+    width: 100%;
+    padding: 10px 16px 10px 40px;
+    border: 1px solid #ddd;
+    border-radius: 20px;
+    background-color: #f5f5f5;
+    font-size: 16px;
+    box-sizing: border-box;
 }
 
 .search-input:focus {
-  outline: none;
-  border-color: #aaa;
-  background-color: #fff;
-} */
+    outline: none;
+    border-color: #aaa;
+    background-color: #fff;
+}
 
 .navbar-right {
     display: flex;
